--- a/Files/rrs/mi1.Rmd
+++ b/Files/rrs/mi1.Rmd
@@ -507,7 +507,7 @@ diff_p <- inv_logit(post$g[,2]) - inv_logit(post$g[,1]) #on the probability scal
 
 We estimated our power to detect differences between conditions at different sample sizes and with different mean changes in the proportion of time spent in the presence of a reward in the before vs. after conditions (Figure 3). We simulated the proportions of times that different sample sizes of individuals would spend in the presence of the reward before and after the flexibility manipulation. We analyzed these simulated data with the model we will use to analyze the actual data, estimating the change in the proportion of time spent in the presence of the reward between the before and after conditions. From the posterior estimates of the model, we extracted both the mean change as well as the ratio of the posterior estimates that were below zero. 
 
-If the mean ratio of estimates below zero is close to 0.5, the model assumes that the change in proportion of time spent in the presence of a reward before the flexibility manipulation is similar to after. If the ratio is close to zero, the model assumes individuals have changed their behavior. For changes smaller than 0.1, models are likely to assume that no changes occured even with large sample sizes. If the change in the proportion of time an individual spends at a location when food is present before the flexibility manipulation vs. after is 0.1, on average 93% of the posterior of the model based on a sample size of 20 individuals will be larger than zero. This means that the model is quite certain there is a difference that is larger than zero. In addition, none of the models for a sample size of 20 at the mean change of 0.1 have a ratio larger than 0.3, meaning that the risk of having a false negative is unlikely. 
+If the mean ratio of estimates below zero is close to 0.5, the model assumes that the change in proportion of time spent in the presence of a reward before the flexibility manipulation is similar to after. If the ratio is close to zero, the model assumes individuals have changed their behavior. For changes smaller than 0.1, models are likely to assume that no changes occurred even with large sample sizes. If the change in the proportion of time an individual spends at a location when food is present before the flexibility manipulation vs. after is 0.1, on average 93% of the posterior of the model based on a sample size of 20 individuals will be larger than zero. This means that the model is quite certain there is a difference that is larger than zero. In addition, none of the models for a sample size of 20 at the mean change of 0.1 have a ratio larger than 0.3, meaning that the risk of having a false negative is unlikely. 
 
 In general, with sample sizes at or above 20 and mean changes in the proportion of time spent in the presence of a reward is 0.1 or larger, then it is highly likely that the model will indicate that individuals have changed their behavior. Mean changes below 0.1 can still be detected, however there is a higher risk that there will be a false negative. If the change in the proportion of time an individual spends at a location when food is present before the flexibility manipulation vs. after is 0.025, on average 61% of the posterior of the model based on a sample size of 20 individuals will be larger than zero. In addition, only 20% of the models for a sample size of 20 at the mean change of 0.025 have a ratio larger than 0.3, meaning that the risk of having a false negative is still low.
 
@@ -1135,12 +1135,302 @@ Time is before or after the flexibility manipulation. ID is nested within time a
 
 *Bayesian model for a normal distribution:*
 
-y ~ $\alpha$[ind] + $\beta$[ind]*B
+y ~ $\alpha$[ind] + $\beta$[ind]*before
 
-y is the response variable (duration at cafes and dumpsters when food was present / total duration at cafes and dumpsters). There will be one intercept, $\alpha$, and one slope $\beta$ per individual, which will be estimated for the two times, B (before and after manipulation). A normal distribution was used because the response variable is a sum with an expected normal distribution  [@mcelreath2020statistical]. The Bayesian model was developed using @mcelreath2020statistical as a guide.
+y is the response variable: the total number of different habitats used per individual. There will be one intercept, $\alpha$, and one slope $\beta$ per individual, which will be estimated for the two times, before (and after) the manipulation. A normal distribution was used because the response variable is a sum without an expected skew to the curve [see Figure 10.6 in @mcelreath2020statistical]. The Bayesian model was developed using @mcelreath2020statistical as a guide.
 
 ###### Power analysis
 
+We estimated our power to detect differences between conditions at different sample sizes and with different mean changes in the total number of different habitats used per individual in the before vs. after conditions (Figure 3). We simulated the number of habitats used for different sample sizes of individuals before and after the flexibility manipulation. We analyzed these simulated data with the model we will use to analyze the actual data, estimating the change in the number of habitats used between the before and after conditions. From the posterior estimates of the model, we extracted both the mean change as well as the ratio of the posterior estimates that were below zero.
+
+If the mean ratio of estimates below zero is close to 0.5, the model assumes that the change in the number of habitats used before the flexibility manipulation is similar to after. If the ratio is close to zero, the model assumes individuals have changed their behavior. For changes smaller than 0.1, models are likely to assume that no changes occurred even with large sample sizes. If the change in the number of habitats used before the flexibility manipulation vs. after is 0.1, on average 93% of the posterior of the model based on a sample size of 20 individuals will be larger than zero. This means that the model is quite certain there is a difference that is larger than zero. In addition, none of the models for a sample size of 20 at the mean change of 0.1 have a ratio larger than 0.3, meaning that the risk of having a false negative is unlikely.
+
+In general, with sample sizes at or above 20 and mean changes in the number of habitats used is 0.1 or larger, then it is highly likely that the model will indicate that individuals have changed their behavior. Mean changes below 0.1 can still be detected, however there is a higher risk that there will be a false negative. If the change in the number of habitats used before the flexibility manipulation vs. after is 0.025, on average 61% of the posterior of the model based on a sample size of 20 individuals will be larger than zero. In addition, only 20% of the models for a sample size of 20 at the mean change of 0.025 have a ratio larger than 0.3, meaning that the risk of having a false negative is still low.
+
+With small mean changes in the response variable, some individuals might not increase or even decrease their response after the manipulation because there is variation around the mean change in individual responses. With small sample sizes, there is a risk that only individuals who did not clearly increase their response will be studied, whereas larger sample sizes are more likely to include a wider spectrum of individuals.
+
+To estimate the risk of detecting false positives, we set the mean change in the proportion of time spent in the presence of the reward to zero so there was no change between the before and after conditions. As expected, the average ratio of estimates below zero is close to 0.5 and independent of sample size. With a sample size of 20, 43% have a ratio smaller than 0.3, meaning that the risk of having a false positive is high. The risk would be lower if the variation among individuals was lower than what we assumed (across all models, the standard deviation of the mean change in proportion was 0.1, which is a conservative estimate).
+
+```{r jayhabitatusesim, eval=F}
+library(rethinking)
+library(cmdstanr)
+set_ulam_cmdstan(TRUE) #makes it so ulam always runs with cmdstan
+rstan_options(auto_write = TRUE)
+
+### SIMULATE the population (p.441 for normal distribution - McElreath 2020)
+N_ind <- 20 #number of individuals tested
+
+#choose the mean number of habitats used and standard deviations - visualize to see whether it would be possible to tell the difference between before (black) and after (red)
+number_before<-5 #5 habitats used per bird in the before condition
+changenumber<-1.5 #there is a difference of 2 habitats used between the before and after conditions
+plot(density(rnorm(10000,number_before,sd=1.5)),lwd=2,xlim=c(0,18),ylim=c(0,0.3)) #A sample size of 10k individuals. An SD of 2 (when the mean before is 5) encompasses all of the range of numbers of habitats we expect to find (0-10) so it would be the largest SD we would expect and thus the most conservative sd to use in the simulations
+lines(density(rnorm(10000,number_before*(changenumber*1),sd=1.5)),lwd=2,col="red") #the after condition. Should be able to tell the difference when changenumber is at least 1.5 and the SD is at least 1.5 (and number_before is 5)
+
+#before
+numberbefore <- round(rnorm(N_ind,mean=5,sd=1.5),2) #number of habitats used, 2 means 2 decimal points
+changenumber <- rnorm(N_ind, mean=numberbefore/2,sd=1.5) #if had a large number before, have a smaller change relative to the after condition. Divide by 2 = assume that on average they will improve by is 2 habitats (the before mean of 5 divided by 2)
+
+#after
+numberafter <- round(numberbefore+changenumber,2)
+
+#check the plot to see whether individuals are increasing their numbers = yes, all points are above the 1:1 line
+#plot(numberbefore,numberafter)
+#abline(0,1)
+
+
+### POWER ANALYSIS: different sample sizes and different mean changes in proportions between before and after conditions
+# We now set our range of likely sample sizes, from a minimum of 9 individuals per population to a maximum of 60 individuals per population. We draw repeated samples of individuals of that size from each of the 5 populations, during each repetition we draw two samples from each population (so we can infer the false negative rate of wrongly estimating that two samples come from a different population even though they were taken from the sample population). This means we have 10 repetitions for each of the 5 sample sizes and each of the 6 changeprops. So 10*6 changeprops (=60) for each of the 5 sample sizes, resulting in a total length of samplesizes of 300
+samplesizes<-c(10,20,30,40,60) #c(10,20,30,40,60)
+
+# Set the means you want to compare
+meanchangenumber1<-5 
+meanchangenumber2<-4
+meanchangenumber3<-3 #e.g., a bird spends 0.6 of its time being rewarded at cafes and dumpsters before the manipulation and then increases this proportion to 0.8 after the manipulation, showing that the manipulation improved their foraging success
+meanchangenumber4<-2
+meanchangenumber5<-1
+meanchangenumber6<-0
+changenumbervariants<-c(meanchangenumber1,meanchangenumber2,meanchangenumber3,meanchangenumber4,meanchangenumber5,meanchangenumber6) #for false negatives
+#changenumbervariants<-c(0) #for false positives
+#changenumbervariants<-c(meanchangeprop6) #for showing differences
+
+#compare different baseline numbers for how many habitats these individuals use before the manipulation
+number_before<-c(2,3,4) #c(0.5,0.6,0.7)
+
+#set up data frame where results will be stored
+simresults <- matrix(NA,nrow=900,ncol=7)
+simresults <- data.frame(simresults)
+colnames(simresults) <- c("n","changenumber_mean","changenumber_sd","repetition","number_before","proportion_estimates_below_zero","count_estimates_below_zero")
+counter<-1
+
+# run simulations. There are 5 different sample sizes, and for each we have 6 different mean change in proportions that we want to examine, and each will repeat 10 times for a total of 300 samples.
+for (samplesize in 1:length(samplesizes)) {
+        N_ind <- samplesizes[samplesize] #number of grackles per sample size
+        
+        #now run through each of the 6 number variations
+        for (numbervariant in 1:length(changenumbervariants)) {
+        
+        #pick the current proportion variant from the list changepropvariants
+        currentchangenumber <- changenumbervariants[numbervariant]
+        
+        for (baselinenumber in 1:3) {
+        #pick the current proportion variant from the list changepropvariants
+        currentnumber_before <- number_before[baselinenumber]
+        
+        for (repetition in 1:10) {
+        #create data frame to store for each repetition of the simulated data to be analyzed by the model
+        sites <- matrix(nrow=n,ncol=3) 
+        colnames(sites)<-c("ID","condition","number_habitats")
+
+        indchange <- rnorm(N_ind, mean=currentchangenumber,sd=1.5) #choose the next number change for each individual
+        
+        #BEFORE manipulation
+        #number of habitats used, 2 means 2 decimal points. Assume baseline number is 2, 3, or 4
+        numberbefore <- round(rnorm(N_ind,mean=currentnumber_before,sd=1.5),2) #number of habitats used, 2 means 2 decimal points
+        #choose the next number change for each individual. If had a large number before, have a smaller change relative to the after condition. Multiply by 0.2 = assume that on average they will improve by 0.2. Modifying the proportion after relative to the proportion before accounts for those individuals who were already successful before the manipulation and thus won't have much of a change in prop due to the manipulation. Using the relative change also ensures that an individual will never have an after proportion larger than 1. Multiply currentchangeprop by 2 bc want the relative change to be in about the same order of magnitude as the proportion of change for each individual as the absolute change. If the proportion before is 0.5, the relative change will be the same as the absolute change. If the proportion before >0.5, then the absolute change will be smaller. E.g., if proportion before = 0.7, then a relative change of 0.2 leads to an absolute change of 0.14. If it is <0.5, then the absolute change will be larger than 0.2.
+        changenumber <- rnorm(N_ind, mean=numberbefore/2,sd=1.5)
+
+        #AFTER manipulation
+        numberafter <- round(numberbefore+changenumber,2)
+  
+        ### run a STAN model to see whether the before and after proportions are estimated to be different from each other
+        #sets up the data sheet with the simulated data that the model will run on
+      dat <- list(
+    habitatuse = rnorm(N_ind*2,mean=5,sd=2), #estimate 20 total individuals (*2 conditions) with a mean of 5 habitats/individual
+    before = c(rep(1,N_ind),rep(2,N_ind)), #1 refers to before and 2 to after
+    ind = rep(1:N_ind,2) #go through all individuals twice because there are observations from before and after for each
+)
+
+        # Our MODEL, which will estimate a different mean and variance of phi for each site 
+        # note: had to add force_recompile bc kept giving me an error and wouldn't finish running. See https://github.com/rmcelreath/rethinking/issues/338
+sj <- ulam(
+    alist(
+        habitatuse ~ normal( mu , sigma ),
+        mu <- a_ind[ind] + b_ind[ind]*before,
+        c(a_ind,b_ind)[ind] ~ multi_normal( c(alpha,beta) , Rho , sigma_ind ),
+        alpha ~ normal(5,2), #5=mean number of habitats used, 2=habitats for the sd
+        beta ~ normal(0,4), #0=mean slope, 4=sd which is like the max difference between before and after
+        sigma_ind ~ exponential(1),
+        sigma ~ exponential(1),
+        Rho ~ lkj_corr(2)
+    ) , data=dat , chains=4 , cores=4 , log_lik=TRUE , cmdstan = TRUE, control = list(adapt_delta = .95, force_recompile = TRUE))
+#precis(sj, depth=2) #check the output to make sure it looks as expected
+
+       #run a CONTRAST to determine whether there is a difference between before (g1) and after (g2) (subtract g1 before from g2 after). Yes if all values for diff_p on one side of zero (want probability scale because that is the scale we used in the simulation)
+post <- extract.samples(sj)
+#str(post) #check it
+diff_b <- post$b_ind[,2] - post$b_ind[,1] #log-odds difference p.341 McElreath 2020
+#PI(diff_b) #did the difference cross zero?
+#precis( list( diff_b=diff_b ) )
+
+  # enter all of the results into the data sheet
+    simresults[counter,]$n <- N_ind
+    simresults[counter,]$changenumber_mean <- currentchangenumber
+    simresults[counter,]$changenumber_sd <- 1.5
+    simresults[counter,]$repetition <- repetition
+    simresults[counter,]$number_before <- currentnumber_before
+    simresults[counter,]$proportion_estimates_below_zero <- sum(diff_b<0)/length(diff_b)
+    simresults[counter,]$count_estimates_below_zero <- sum(diff_b<0)
+    counter<-counter+1 
+    print(c(counter,"out of",10*length(samplesizes)*length(changenumbervariants)*length(number_before)))
+        }
+        }
+        }
+}
+
+#write.csv(simresults,file="simresultsjaytesting.csv") #put the outputs into a csv file so don't have to run the model again...it takes hours
+
+## Prep a figure to show how sample size and mean change number makes a difference in the results. Get posterior values for particular sample sizes and change numbers. Set samplesize (20 or 60), changenumbervariants (0.1 or 0.025), and number_before (always 0.6) to just one number and run the model. Generate the output, write to csv. Repeat for other model variants
+#write.csv(diff_b,file="diff_p20changenumber2.csv")
+```
+
+```{r jayq3simulationfiguresamplesize, eval=T, messages=F}
+library(rethinking)
+library(cmdstanr)
+set_ulam_cmdstan(TRUE) #makes it so ulam always runs with cmdstan
+
+#load the data sheet that was made from the simulation in the previous R chunk
+d <- read.csv("https://raw.githubusercontent.com/ManyIndividuals/ManyIndividuals/main/Files/rrs/mi1simresultsjay.csv", header = TRUE, sep = ",", stringsAsFactors = FALSE)
+#head(d)
+
+# Set up the data sheet for the model
+dat <- list(
+  proportion_estimates_below_zero = as.numeric(d$proportion_estimates_below_zero),
+  count_estimates_below_zero = as.numeric(d$count_estimates_below_zero),
+  changenumber_mean = as.numeric(sqrt(d$changenumber_mean)),
+  samplesize = as.integer(as.factor(d$n))
+)
+
+# We run the STAN model - it is a binomial model that assumes that the probability to estimate a difference depends on an interaction between the sample size and the difference between the conditions (before/after). The response variable is a count and the model turns it into a proportion
+m_samplesize_diffscount <- ulam(
+  alist(
+    count_estimates_below_zero~dbinom(2000,p),
+    logit(p) <- a[samplesize]-b[samplesize]*changenumber_mean,
+    a[samplesize]~dnorm(a_bar,sigma_a),
+    a_bar~dnorm(0,1.5),
+    sigma_a~dexp(1),
+    b[samplesize]~dnorm(0,1.5)
+  ),data=dat, log_lik=TRUE, messages=FALSE,cmdstan=T)
+
+# Extract the posterior estimates from this STAN model
+precis_output<-precis( m_samplesize_diffscount , depth=2 )
+
+# Plot the predictions for the different sample sizes as separate lines = COUNT out of 2000
+plot(NULL,xlim=c(-0.01,0.41),ylim=c(0.0,0.6),pch=1,ann=F,frame.plot=F,cex=1.5)
+
+mu_10<- link( m_samplesize_diffscount , data=data.frame( changenumber_mean=sqrt(unique(d$changenumber_mean)),samplesize=rep(1,length(unique(d$changenumber_mean))) ) )
+mu_10_mean <- apply( mu_10 , 2 , mean )
+mu_10_ci <- apply( mu_10 , 2 , PI , prob=0.97 )
+shade( mu_10_ci , unique(d$changenumber_mean) , col=col.alpha("blue",0.7) )
+lines(x=c(-0.008,-0.008),y=c(min(d[d$n %in% 10 & d$changenumber_mean %in% 0,]$proportion_estimates_below_zero),max(d[d$n %in% 10 & d$changenumber_mean %in% 0,]$proportion_estimates_below_zero)),col=col.alpha("blue",0.5))
+lines(x=c(0.022,0.022),y=c(min(d[d$n %in% 10 & d$changenumber_mean %in% 0.025,]$proportion_estimates_below_zero),max(d[d$n %in% 10 & d$changenumber_mean %in% 0.025,]$proportion_estimates_below_zero)),col=col.alpha("blue",0.5))
+lines(x=c(0.044,0.044),y=c(min(d[d$n %in% 10 & d$changenumber_mean %in% 0.05,]$proportion_estimates_below_zero),max(d[d$n %in% 10 & d$changenumber_mean %in% 0.05,]$proportion_estimates_below_zero)),col=col.alpha("blue",0.5))
+lines(x=c(0.092,0.092),y=c(min(d[d$n %in% 10 & d$changenumber_mean %in% 0.1,]$proportion_estimates_below_zero),max(d[d$n %in% 10 & d$changenumber_mean %in% 0.1,]$proportion_estimates_below_zero)),col=col.alpha("blue",0.5))
+lines(x=c(0.192,0.192),y=c(min(d[d$n %in% 10 & d$changenumber_mean %in% 0.2,]$proportion_estimates_below_zero),max(d[d$n %in% 10 & d$changenumber_mean %in% 0.2,]$proportion_estimates_below_zero)),col=col.alpha("blue",0.5))
+lines(x=c(0.292,0.292),y=c(min(d[d$n %in% 10 & d$changenumber_mean %in% 0.3,]$proportion_estimates_below_zero),max(d[d$n %in% 10 & d$changenumber_mean %in% 0.3,]$proportion_estimates_below_zero)),col=col.alpha("blue",0.5))
+lines(x=c(0.392,0.392),y=c(min(d[d$n %in% 10 & d$changenumber_mean %in% 0.4,]$proportion_estimates_below_zero),max(d[d$n %in% 10 & d$changenumber_mean %in% 0.4,]$proportion_estimates_below_zero)),col=col.alpha("blue",0.5))
+
+mu_20 <- link( m_samplesize_diffscount , data=data.frame( changenumber_mean=sqrt(unique(d$changenumber_mean)),samplesize=rep(2,length(unique(d$changenumber_mean))) ) )
+mu_20_mean <- apply( mu_20 , 2 , mean )
+mu_20_ci <- apply( mu_20 , 2 , PI , prob=0.97 )
+shade( mu_20_ci , unique(d$changenumber_mean) , col=col.alpha("orange",0.7) )
+lines(x=c(-0.004,-0.004),y=c(min(d[d$n %in% 20 & d$changenumber_mean %in% 0,]$proportion_estimates_below_zero),max(d[d$n %in% 20 & d$changenumber_mean %in% 0,]$proportion_estimates_below_zero)),col=col.alpha("orange",0.5))
+lines(x=c(0.024,0.024),y=c(min(d[d$n %in% 20 & d$changenumber_mean %in% 0.025,]$proportion_estimates_below_zero),max(d[d$n %in% 20 & d$changenumber_mean %in% 0.025,]$proportion_estimates_below_zero)),col=col.alpha("orange",0.5))
+lines(x=c(0.048,0.048),y=c(min(d[d$n %in% 20 & d$changenumber_mean %in% 0.05,]$proportion_estimates_below_zero),max(d[d$n %in% 20 & d$changenumber_mean %in% 0.05,]$proportion_estimates_below_zero)),col=col.alpha("orange",0.5))
+lines(x=c(0.096,0.096),y=c(min(d[d$n %in% 20 & d$changenumber_mean %in% 0.1,]$proportion_estimates_below_zero),max(d[d$n %in% 20 & d$changenumber_mean %in% 0.1,]$proportion_estimates_below_zero)),col=col.alpha("orange",0.5))
+lines(x=c(0.196,0.196),y=c(min(d[d$n %in% 20 & d$changenumber_mean %in% 0.2,]$proportion_estimates_below_zero),max(d[d$n %in% 20 & d$changenumber_mean %in% 0.2,]$proportion_estimates_below_zero)),col=col.alpha("orange",0.5))
+lines(x=c(0.296,0.296),y=c(min(d[d$n %in% 20 & d$changenumber_mean %in% 0.3,]$proportion_estimates_below_zero),max(d[d$n %in% 20 & d$changenumber_mean %in% 0.3,]$proportion_estimates_below_zero)),col=col.alpha("orange",0.5))
+lines(x=c(0.396,0.396),y=c(min(d[d$n %in% 20 & d$changenumber_mean %in% 0.4,]$proportion_estimates_below_zero),max(d[d$n %in% 20 & d$changenumber_mean %in% 0.4,]$proportion_estimates_below_zero)),col=col.alpha("orange",0.5))
+
+mu_30 <- link( m_samplesize_diffscount , data=data.frame( changenumber_mean=sqrt(unique(d$changenumber_mean)),samplesize=rep(3,length(unique(d$changenumber_mean))) ) )
+mu_30_mean <- apply( mu_30 , 2 , mean )
+mu_30_ci <- apply( mu_30 , 2 , PI , prob=0.97 )
+shade( mu_30_ci ,unique(d$changenumber_mean), col=col.alpha("skyblue",0.7) )
+lines(x=c(0,0),y=c(min(d[d$n %in% 30 & d$changenumber_mean %in% 0,]$proportion_estimates_below_zero),max(d[d$n %in% 30 & d$changenumber_mean %in% 0,]$proportion_estimates_below_zero)),col=col.alpha("skyblue",0.5))
+lines(x=c(0.028,0.028),y=c(min(d[d$n %in% 30 & d$changenumber_mean %in% 0.025,]$proportion_estimates_below_zero),max(d[d$n %in% 30 & d$changenumber_mean %in% 0.025,]$proportion_estimates_below_zero)),col=col.alpha("skyblue",0.5))
+lines(x=c(0.052,0.052),y=c(min(d[d$n %in% 30 & d$changenumber_mean %in% 0.05,]$proportion_estimates_below_zero),max(d[d$n %in% 30 & d$changenumber_mean %in% 0.05,]$proportion_estimates_below_zero)),col=col.alpha("skyblue",0.5))
+lines(x=c(0.1,0.1),y=c(min(d[d$n %in% 30 & d$changenumber_mean %in% 0.1,]$proportion_estimates_below_zero),max(d[d$n %in% 30 & d$changenumber_mean %in% 0.1,]$proportion_estimates_below_zero)),col=col.alpha("skyblue",0.5))
+lines(x=c(0.2,0.2),y=c(min(d[d$n %in% 30 & d$changenumber_mean %in% 0.2,]$proportion_estimates_below_zero),max(d[d$n %in% 30 & d$changenumber_mean %in% 0.2,]$proportion_estimates_below_zero)),col=col.alpha("skyblue",0.5))
+lines(x=c(0.3,0.3),y=c(min(d[d$n %in% 30 & d$changenumber_mean %in% 0.3,]$proportion_estimates_below_zero),max(d[d$n %in% 30 & d$changenumber_mean %in% 0.3,]$proportion_estimates_below_zero)),col=col.alpha("skyblue",0.5))
+lines(x=c(0.4,0.4),y=c(min(d[d$n %in% 30 & d$changenumber_mean %in% 0.4,]$proportion_estimates_below_zero),max(d[d$n %in% 30 & d$changenumber_mean %in% 0.4,]$proportion_estimates_below_zero)),col=col.alpha("skyblue",0.5))
+
+mu_40 <- link( m_samplesize_diffscount , data=data.frame( changenumber_mean=sqrt(unique(d$changenumber_mean)),samplesize=rep(4,length(unique(d$changenumber_mean))) ) )
+mu_40_mean <- apply( mu_40 , 2 , mean )
+mu_40_ci <- apply( mu_40 , 2 , PI , prob=0.97 )
+shade( mu_40_ci ,unique(d$changenumber_mean) , col=col.alpha("#213940",0.7) )
+lines(x=c(0.004,0.004),y=c(min(d[d$n %in% 40 & d$changenumber_mean %in% 0,]$proportion_estimates_below_zero),max(d[d$n %in% 40 & d$changenumber_mean %in% 0,]$proportion_estimates_below_zero)),col=col.alpha("#213940",0.5))
+lines(x=c(0.032,0.032),y=c(min(d[d$n %in% 40 & d$changenumber_mean %in% 0.025,]$proportion_estimates_below_zero),max(d[d$n %in% 40 & d$changenumber_mean %in% 0.025,]$proportion_estimates_below_zero)),col=col.alpha("#213940",0.5))
+lines(x=c(0.056,0.056),y=c(min(d[d$n %in% 40 & d$changenumber_mean %in% 0.05,]$proportion_estimates_below_zero),max(d[d$n %in% 40 & d$changenumber_mean %in% 0.05,]$proportion_estimates_below_zero)),col=col.alpha("#213940",0.5))
+lines(x=c(0.104,0.104),y=c(min(d[d$n %in% 40 & d$changenumber_mean %in% 0.1,]$proportion_estimates_below_zero),max(d[d$n %in% 40 & d$changenumber_mean %in% 0.1,]$proportion_estimates_below_zero)),col=col.alpha("#213940",0.5))
+lines(x=c(0.204,0.204),y=c(min(d[d$n %in% 40 & d$changenumber_mean %in% 0.2,]$proportion_estimates_below_zero),max(d[d$n %in% 40 & d$changenumber_mean %in% 0.2,]$proportion_estimates_below_zero)),col=col.alpha("#213940",0.5))
+lines(x=c(0.304,0.304),y=c(min(d[d$n %in% 40 & d$changenumber_mean %in% 0.3,]$proportion_estimates_below_zero),max(d[d$n %in% 40 & d$changenumber_mean %in% 0.3,]$proportion_estimates_below_zero)),col=col.alpha("#213940",0.5))
+lines(x=c(0.404,0.404),y=c(min(d[d$n %in% 40 & d$changenumber_mean %in% 0.4,]$proportion_estimates_below_zero),max(d[d$n %in% 40 & d$changenumber_mean %in% 0.4,]$proportion_estimates_below_zero)),col=col.alpha("#213940",0.5))
+
+mu_60 <- link( m_samplesize_diffscount , data=data.frame( changenumber_mean=sqrt(unique(d$changenumber_mean)),samplesize=rep(5,length(unique(d$changenumber_mean))) ) )
+mu_60_mean <- apply( mu_60 , 2 , mean )
+mu_60_ci <- apply( mu_60 , 2 , PI , prob=0.97 )
+shade( mu_60_ci , unique(d$changenumber_mean), col=col.alpha("red",0.7) )
+lines(x=c(0.008,0.008),y=c(min(d[d$n %in% 60 & d$changenumber_mean %in% 0,]$proportion_estimates_below_zero),max(d[d$n %in% 60 & d$changenumber_mean %in% 0,]$proportion_estimates_below_zero)),col=col.alpha("red",0.5))
+lines(x=c(0.036,0.036),y=c(min(d[d$n %in% 60 & d$changenumber_mean %in% 0.025,]$proportion_estimates_below_zero),max(d[d$n %in% 60 & d$changenumber_mean %in% 0.025,]$proportion_estimates_below_zero)),col=col.alpha("red",0.5))
+lines(x=c(0.06,0.06),y=c(min(d[d$n %in% 60 & d$changenumber_mean %in% 0.05,]$proportion_estimates_below_zero),max(d[d$n %in% 60 & d$changenumber_mean %in% 0.05,]$proportion_estimates_below_zero)),col=col.alpha("red",0.5))
+lines(x=c(0.108,0.108),y=c(min(d[d$n %in% 60 & d$changenumber_mean %in% 0.1,]$proportion_estimates_below_zero),max(d[d$n %in% 60 & d$changenumber_mean %in% 0.1,]$proportion_estimates_below_zero)),col=col.alpha("red",0.5))
+lines(x=c(0.208,0.208),y=c(min(d[d$n %in% 60 & d$changenumber_mean %in% 0.2,]$proportion_estimates_below_zero),max(d[d$n %in% 60 & d$changenumber_mean %in% 0.2,]$proportion_estimates_below_zero)),col=col.alpha("red",0.5))
+lines(x=c(0.308,0.308),y=c(min(d[d$n %in% 60 & d$changenumber_mean %in% 0.3,]$proportion_estimates_below_zero),max(d[d$n %in% 60 & d$changenumber_mean %in% 0.3,]$proportion_estimates_below_zero)),col=col.alpha("red",0.5))
+lines(x=c(0.408,0.408),y=c(min(d[d$n %in% 60 & d$changenumber_mean %in% 0.4,]$proportion_estimates_below_zero),max(d[d$n %in% 60 & d$changenumber_mean %in% 0.4,]$proportion_estimates_below_zero)),col=col.alpha("red",0.5))
+
+legend(x="topright",legend=c(lty2="10",lty1="20",lty3="30",lty2="40",lty3="60"),lty=c(1,1,1,1,1),lwd=c(5,5,5,5,5),col=c(col.alpha("blue",0.4),col.alpha("orange",0.4),col.alpha("skyblue",0.4),col.alpha("#213940",0.4),col.alpha("red",0.4)),cex=1,bty="n")
+
+# Axis labels (side 1=x axis, side 2=y axis)
+mtext("Sample size",side=3,line=-0.7,at=0.4)
+mtext("Power to detect differences between conditions",side=3,line=1,at=0.2,cex=1.5)
+mtext("Mean change in number of habitats used before vs. after",side=1,line=3, cex=1.2)
+mtext("Ratio of estimates below zero",side=2,line=3, cex=1.2)
+
+#93% of the posterior mass is above zero for a 0.1 or larger mean change in proportion between before and after when the sample size is 20. 96% for n=30, 99% for n=40, and 99.7% for n=60
+#mu_10_ci #82%. 3rd column from the right (column 4) for the 0.1 category on the x axis (ordered by unique(d$changeprop_mean))
+#mu_20_ci #93%
+#mu_30_ci #96%
+#mu_40_ci #99%
+#mu_60_ci #99.7%
+#sum(d[d$n %in% 20 & d$changenumber_mean %in% 0,]$proportion_estimates_below_zero<0.3) #13 values are <0.3 (out of 30)
+#length(d[d$n %in% 20 & d$changenumber_mean %in% 0,]$proportion_estimates_below_zero) #30 values total
+
+### extra figure to show that an increase in sample size reduces the SD, but does not shift the curve to the right
+#d20 <-d[d$n==20,] #sample size of 20, sd=0.1
+#d60 <-d[d$n==60,] #sample size of 60, sd=0.1
+#plot(density(d20$proportion_estimates_below_zero),lwd=2,col="blue",xlim=c(-0.1,1),ylim=c(0,40),ylab="",ylab(""),xlab(""))
+#lines(density(d60$proportion_estimates_below_zero),lwd=2,col="red")
+#abline(v=0)
+#legend(x="topright",legend=c(lty2="20",lty1="60"),lty=c(1,1),lwd=c(5,5),col=c(col.alpha("blue",0.4),col.alpha("red",0.4)),cex=1,bty="n")
+
+# Axis labels (side 1=x axis, side 2=y axis)
+#mtext("Sample size",side=3,line=0,at=1)
+#mtext("Mean change in number of habitats used between before and after conditions",side=1,line=3, cex=1.2)
+#mtext("Density of the proportion of estimates below zero",side=2,line=3, cex=1.2)
+```
+
+**Figure 4.** Curves of the mean ratio of estimates below zero (vertical lines show the minimum and maximum ratios), which illustrates the power we have to detect differences between conditions at different sample sizes. Across all models, the standard deviation of the mean change in proportion was 0.1 (a conservative estimate) and the proportion of time spent in the presence of food before the flexibility manipulation was 0.6.
+
+```{r jayq3simulationfigurecurve, eval=F}
+# (not shown in the article, but useful if you want to learn more about this modeling process)
+
+# a figure that shows that an increase in sample size usually only decreases the sd and doesn't shift the curve to the right where there would be less of a chance of crossing zero and thus being less likely that the before and after are different from each other 
+#load the data sheet that was made from the simulation
+d <- read.csv("https://raw.githubusercontent.com/ManyIndividuals/ManyIndividuals/main/Files/rrs/mi1_posterior_diff_p.csv", header = TRUE, sep = ",", stringsAsFactors = FALSE)
+#head(d)
+
+# figure to show that an increase in sample size reduces the SD, but does not shift the curve to the right
+plot(density(d$diff_p20changeprop0.1),lwd=2,col="blue",xlim=c(-0.1,0.3),ylim=c(0,25),ylab="",ylab(""),xlab(""))
+lines(density(d$diff_p60changeprop0.1),lwd=2,col="red")
+lines(density(d$diff_p20changeprop0.025),lwd=2,col="black")
+lines(density(d$diff_p60changeprop0.025),lwd=2,col="purple")
+abline(v=0)
+legend(x="topright",legend=c(lty2="n=20, change=0.1",lty1="n=60, change=0.1",lty1="n=20, change=0.025",lty1="n=60, change=0.025"),lty=c(1,1,1,1),lwd=c(5,5,5,5),col=c(col.alpha("blue",0.4),col.alpha("red",0.4),col.alpha("black",0.4),col.alpha("purple",0.4)),cex=1,bty="n")
+
+# Axis labels (side 1=x axis, side 2=y axis)
+mtext("Sample size and mean proportion change",side=3,line=0,at=1)
+mtext("Mean change in proportion of time spent in the presence of a reward between before and after conditions",side=1,line=3, cex=1.2)
+mtext("Density",side=2,line=3, cex=1.2)
+```
 
 
 ###### Run this model on the actual data
