--- a/Files/rrs/mi1.Rmd
+++ b/Files/rrs/mi1.Rmd
@@ -1161,21 +1161,21 @@ rstan_options(auto_write = TRUE)
 N_ind <- 20 #number of individuals tested
 
 #choose the mean number of habitats used and standard deviations - visualize to see whether it would be possible to tell the difference between before (black) and after (red)
-number_before<-5 #5 habitats used per bird in the before condition
-changenumber<-1.5 #there is a difference of 2 habitats used between the before and after conditions
+number_before<-4.5 #number of habitats used per bird in the before condition
+changenumber<-1.5 #the difference in the number habitats used between the before and after conditions
 plot(density(rnorm(10000,number_before,sd=1.5)),lwd=2,xlim=c(0,18),ylim=c(0,0.3)) #A sample size of 10k individuals. An SD of 2 (when the mean before is 5) encompasses all of the range of numbers of habitats we expect to find (0-10) so it would be the largest SD we would expect and thus the most conservative sd to use in the simulations
 lines(density(rnorm(10000,number_before*(changenumber*1),sd=1.5)),lwd=2,col="red") #the after condition. Should be able to tell the difference when changenumber is at least 1.5 and the SD is at least 1.5 (and number_before is 5)
 
 #before
-numberbefore <- round(rnorm(N_ind,mean=5,sd=1.5),2) #number of habitats used, 2 means 2 decimal points
+numberbefore <- round(rnorm(N_ind,mean=4.5,sd=1.5),2) #number of habitats used, 2 means 2 decimal points
 numberbefore[numberbefore<1]<-1 #this needs to be a minimum of 1 bc an individual can never live in less than 1 habitat
-changenumber <- rnorm(N_ind, mean=numberbefore/2,sd=1.5) #if had a large number before, have a smaller change relative to the after condition. Divide by 2 = assume that on average they will improve by is 2 habitats (the before mean of 5 divided by 2)
+changenumber <- rnorm(N_ind, mean=numberbefore/2,sd=1.5) #DIETER if had a large number before, have a smaller change relative to the after condition. Divide by 2 = assume that on average they will improve by is 2 habitats (the before mean of 5 divided by 2)
 
 #after
 numberafter <- round(numberbefore+changenumber,2)
 numberafter[numberafter<1]<-1 #this needs to be a minimum of 1 bc an individual can never live in less than 1 habitat
 
-#check the plot to see whether individuals are increasing their numbers = yes, all points are above the 1:1 line
+#check the plot to see whether individuals are increasing their numbers = one point is below the 1:1 line
 #plot(numberbefore,numberafter)
 #abline(0,1)
 
@@ -1196,7 +1196,7 @@ changenumbervariants<-c(meanchangenumber1,meanchangenumber2,meanchangenumber3,me
 #changenumbervariants<-c(meanchangeprop6) #for showing differences
 
 #compare different baseline numbers for how many habitats these individuals use before the manipulation
-number_before<-c(2,3,4) #c(0.5,0.6,0.7)
+number_before<-c(3,4.5,6)
 
 #set up data frame where results will be stored
 simresults <- matrix(NA,nrow=900,ncol=7)
@@ -1252,7 +1252,7 @@ sj <- ulam(
         habitatuse ~ normal( mu , sigma ),
         mu <- a_ind[ind] + b_ind[ind]*before,
         c(a_ind,b_ind)[ind] ~ multi_normal( c(alpha,beta) , Rho , sigma_ind ),
-        alpha ~ normal(5,2), #5=mean number of habitats used, 2=habitats for the sd
+        alpha ~ normal(4.5,2), #5=mean number of habitats used, 2=habitats for the sd
         beta ~ normal(0,4), #0=mean slope, 4=sd which is like the max difference between before and after
         sigma_ind ~ exponential(1),
         sigma ~ exponential(1),
@@ -1451,7 +1451,7 @@ set_ulam_cmdstan(TRUE) #makes it so ulam always runs with cmdstan
 N_ind <- 20
 
 dat <- list(
-    habitatuse = rnorm(40,mean=5,sd=2), #estimate 20 total individuals (*2 conditions) with a mean of 5 habitats/individual
+    habitatuse = rnorm(40,mean=4.5,sd=2), #estimate 20 total individuals (*2 conditions) with a mean of 4.5 habitats/individual (halfway between the max 10 suburban and 8 natural habitats)
     before = c(rep(1,N_ind),rep(2,N_ind)), #1 refers to before and 2 to after
     ind = rep(1:N_ind,2) #go through all individuals twice because there are observations from before and after for each
 )
@@ -1472,7 +1472,7 @@ mj <- ulam(
         habitatuse ~ normal( mu , sigma ),
         mu <- a_ind[ind] + b_ind[ind]*before,
         c(a_ind,b_ind)[ind] ~ multi_normal( c(alpha,beta) , Rho , sigma_ind ),
-        alpha ~ normal(5,2), #5=mean number of habitats used, 2=habitats for the sd
+        alpha ~ normal(4.5,2), #4.5=mean number of habitats used, 2=habitats for the sd
         beta ~ normal(0,4), #0=mean slope, 4=sd which is like the max difference between before and after
         sigma_ind ~ exponential(1),
         sigma ~ exponential(1),
